fix stepperIcon squishing on smaller screens

--- a/src/Stepper/Stepper.module.scss
+++ b/src/Stepper/Stepper.module.scss
@@ -33,6 +33,7 @@
   width: 2rem;
   height: 2rem;
   display: flex;
+  flex-shrink: 0;
   justify-content: center;
   align-items: center;
   border-radius: var(--sui-border-radius-full);
